add form and footer

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     ${ require('./partials/meet-us.html') }
     ${ require('./partials/office.html') }
     ${ require('./partials/contact.html') }
+    ${ require('./partials/footer.html') }
   </div>
 </body>
 
