--- a/app/index.html
+++ b/app/index.html
@@ -10,12 +10,20 @@
 
 <body>
   <div class="sy-page">
+    ${ require('./partials/navigation.html') }
     ${ require('./partials/intro.html') }
 
+    <a name="sy-what"></a>
     ${ require('./partials/services.html') }
+
+    <a name="sy-why"></a>
     ${ require('./partials/why-us.html') }
+
+    <a name="sy-meet"></a>
     ${ require('./partials/meet-us.html') }
     ${ require('./partials/office.html') }
+
+    <a name="sy-contact"></a>
     ${ require('./partials/contact.html') }
     ${ require('./partials/footer.html') }
   </div>
