--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,11 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 </head>
 
-<body>
+
+<body class="sy-landingpage">
+  ${ require('./partials/navigation.html') }
+
   <div class="sy-page">
-    ${ require('./partials/navigation.html') }
     ${ require('./partials/intro.html') }
 
     <a name="sy-what"></a>
