added dummy content to imprint and privacy pages

--- a/app/privacy.html
+++ b/app/privacy.html
@@ -9,8 +9,46 @@
 </head>
 
 <body>
-  <div class="sy-page">
-    hello privacy
+  <div class="sy-navigation">
+    <nav class="sy-navigation__list">
+      <a class="sy-navigation__item" href='/'>Home</a>
+    </nav>
+  </div>
+
+  <div class="sy-page sy-legal">
+    <section class="sy-section">
+      <header class="sy-header">
+        <h1 class="sy-headline sy-headline--section">Datenschutzerklärung</h1>
+      </header>
+      <div class="sy-section__content">
+        <h3 class="sy-headline">1. Geltungsbereich</h3>
+        Diese Datenschutzerklärung gilt für das Internet-Angebot der Satellytes Digital Consulting GmbH i.G. welches auf den unter der Domain „satellytes.com“ abrufbaren Websites (im Folgenden „unsere Website“ genannt) abrufbar ist.
+      </div>
+      <div class="sy-section__content">
+        <h3 class="sy-headline">2. Was sind personenbezogene Daten?</h3>
+        Personenbezogene Daten sind Informationen, die dazu genutzt werden können, persönliche oder sachliche Verhältnisse über Sie zu erfahren (z.B. Name, Anschrift, Telefonnummer, Geburtsdatum oder E-Mail-Adresse). Informationen, bei denen wir keinen (oder nur mit einem unverhältnismäßigen Aufwand) Bezug zu Ihrer Person herstellen können, z.B. durch Anonymisierung der Informationen, sind keine personenbezogenen Daten.
+      </div>
+      <div class="sy-section__content">
+        <h3 class="sy-headline">3. Welche personenbezogenen Daten werden von uns erhoben und verarbeitet?</h3>
+        Einen Großteil unserer Webpräsenz können Sie ohne Angabe personenbezogener Daten nutzen. Nehmen Sie die Möglichkeit in Anspruch, mittels unseres Kontakt-Formulars Anfragen an uns zu richten, fragen wir Sie nach Ihrem Name, Ihrer E-Mail-Adresse sowie weiteren geschäftlichen Kontaktdaten. Es unterliegt Ihrer freien Entscheidung, ob Sie uns diese Daten mitteilen. Ohne diese Angaben können wir allerdings Ihren Kontaktwunsch nicht erfüllen bzw. die gewünschten Dienstleistungen ggf. nicht oder unter Umständen nur eingeschränkt anbieten. Weitere Angaben innerhalb des Kontakt-Formulars erfolgen freiwillig durch Sie. Wenn Sie uns eine E-Mail senden, verwenden wir Ihre darin mitgeteilten personenbezogenen Daten nur für die Korrespondenz mit Ihnen. Eine Weitergabe an Dritte erfolgt selbstverständlich nicht. Diese Website nutzt ausserdem die Open-Source-Software Piwik für die statistische Auswertung von Besucherzugriffen. Die von Piwik erfassten Daten werden nicht und niemals auf andere Server übertragen oder an Dritte weitergegeben, sondern in anonymisierter Form dazu verwendet, unser Angebot zu verbessern. IP-Adressen werden in Piwik ohne das letzte Tupel gespeichert. Wir wissen, aus welchem Netz eine Anfrage kam, nicht jedoch von welchem Rechner. Sofern Sie in Ihrem Browser die Funktion Do-not-Track aktiviert haben, erfolgt keine Erfassung durch Piwik. Sie können auch im Folgenden die Erfassung deaktivieren:
+      </div>
+      <div class="sy-section__content">
+        <h3 class="sy-headline">4. Wozu nutzen wir Ihre Daten?</h3>
+        Wir nutzen Ihre personenbezogenen Daten ausschließlich, um Ihnen über unsere Website einen umfangreichen Service anbieten zu können oder Ihnen – falls Sie uns eine E-Mail oder eine Formularanfrage senden - um Ihrer wunschgemäßen Kontaktaufnahme nachzukommen oder um Ihre Informationswünsche zu erfüllen.
+      </div>
+      <div class="sy-section__content">
+        <h3 class="sy-headline">5. Anonyme Nutzungsdaten</h3>
+        Wir erstellen keine personenbezogenen Nutzerprofile. In Verbindung mit dem Abruf der von Ihnen gewünschten Informationen werden auf unseren Servern lediglich in anonymisierter Form Daten zur Erbringung unserer verschiedenen Services oder zu Auswertungszwecken gespeichert. Hierbei werden allgemeine Informationen protokolliert, z.B. wann welche Inhalte aus unserem Angebot abgerufen werden oder welche Seiten am häufigsten besucht werden. Es werden keine Cookies eingesetzt. Diese Nutzungsdaten lassen jedoch keine Rückschlüsse auf den Benutzer zu. Sämtliche dieser anonymisiert erhobenen Nutzungsdaten werden nicht mit Ihren personenbezogenen Daten nach Ziffer 3.) dieser Datenschutzerklärung zusammengeführt und umgehend nach Ende der statistischen Auswertung gelöscht.
+      </div>
+      <div class="sy-section__content">
+        <h3 class="sy-headline">6. Sicherungsmaßnahmen zum Schutz der bei uns gespeicherten Daten</h3>
+        Personenbezogene Daten, die Sie uns über unsere Website und im E-Mail-Verkehr mit uns anvertrauen, sind sicher. Wir verpflichten uns, Ihre Privatsphäre zu schützen und Ihre personenbezogenen Daten vertraulich zu behandeln. Um einen Verlust oder Missbrauch der bei uns gespeicherten Daten zu vermeiden, treffen wir umfangreiche technische und betriebliche Sicherheitsvorkehrungen, die regelmäßig überprüft und dem technologischen Fortschritt angepasst werden. Wir weisen Sie jedoch darauf hin, dass es aufgrund der Struktur des Internets möglich ist, dass die Regeln des Datenschutzes und die o.g. Sicherungsmaßnahmen von anderen, nicht im Verantwortungsbereich von uns liegenden Personen oder Institutionen nicht beachtet werden. Insbesondere können unverschlüsselt preisgegebene Daten - auch wenn dies per E-Mail erfolgt - von Dritten mitgelesen werden. Wir haben technisch hierauf keinen Einfluss. Es liegt im Verantwortungsbereich des Nutzers, die von ihm zur Verfügung gestellten Daten durch Verschlüsselung oder in sonstiger Weise gegen Missbrauch zu schützen.
+      </div>
+      <div class="sy-section__content">
+        <h3 class="sy-headline">7. Hyperlinks zu fremden Websites</h3>
+        Auf unserer Website befinden sich sog. Hyperlinks zu Websites anderer Anbieter. Bei Aktivierung dieser Hyperlinks werden sie von unserer Website direkt auf die Website der anderen Anbieter weitergeleitet. Sie erkennen dies u.a. am Wechsel der URL. Wir können keine Verantwortung für den vertraulichen Umgang Ihrer Daten auf diesen Websites Dritter übernehmen, da wir keinen Einfluss darauf haben, dass diese Unternehmen die Datenschutzbestimmungen einhalten. Über den Umgang mit Ihren personenbezogenen Daten durch diese Unternehmen informieren Sie sich bitte auf diesen Websites direkt.
+      </div>
+    </section>
   </div>
 </body>
 
