--- a/app/imprint.html
+++ b/app/imprint.html
@@ -9,8 +9,71 @@
 </head>
 
 <body>
-  <div class="sy-page">
-    hello imprint
+  <div class="sy-navigation">
+    <nav class="sy-navigation__list">
+      <a class="sy-navigation__item" href='/'>Home</a>
+    </nav>
+  </div>
+
+  <div class="sy-page sy-legal">
+    <section class="sy-section">
+      <header class="sy-header">
+        <h1 class="sy-headline sy-headline--section">Impressum</h1>
+      </header>
+      <div class="sy-section__content">
+        <p>Angaben gemäß § 5 TMG</p>
+        <p>
+          Satellytes Digital Consulting GmbH<br/>
+          Carola-Neher-Str. 10<br/>
+          81379 München
+        </p>
+      </div>
+
+      <div class="sy-section__content">
+        <h3 class="sy-headline">Vertreten durch</h3>
+        <p>Gholam Abdol</p>
+      </div>
+
+      <div class="sy-section__content">
+        <h3 class="sy-headline">Kontakt</h3>
+        <p>
+          Telefon: 0123456789<br/>
+          E-Mail: <a href="mailto:legal@satellytes.com">legal@satellytes.com</a><br/>
+          Internetadresse: <a href="https://www.satellytes.com" target="_blank" rel="noopener">https://satellytes.com</a><br/>
+        </p>
+      </div>
+
+      <div class="sy-section__content">
+        <h3 class="sy-headline">Registereintrag</h3>
+        <p>
+          Eintragung im Handelsregister<br/>
+          Registernummer: 0000<br/>
+          Registergericht: XXXXX
+        </p>
+      </div>
+
+      <div class="sy-section__content">
+        <h3 class="sy-headline">Haftungsausschluss</h3>
+        <p>
+          Haftung für Inhalte<br/>
+          Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
+        </p>
+      </div>
+
+      <div class="sy-section__content">
+        <h3 class="sy-headline">Haftung für Links</h3>
+        <p>
+          Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.
+        </p>
+      </div>
+
+      <div class="sy-section__content">
+        <h3 class="sy-headline">Urheberrecht</h3>
+        <p>
+          Die durch die Seitenbetreiber erstellten bzw. verwendeten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
+        </p>
+      </div>
+    </section>
   </div>
 </body>
 
