removed intersectionobserver from navigation

--- a/app/imprint.html
+++ b/app/imprint.html
@@ -9,11 +9,7 @@
 </head>
 
 <body>
-  <div class="sy-navigation">
-    <nav class="sy-navigation__list">
-      <a class="sy-navigation__item" href='/'>Home</a>
-    </nav>
-  </div>
+  ${ require('./partials/landingpage/navigation.html') }
 
   <div class="sy-page sy-legal">
     <section class="sy-section">
@@ -74,6 +70,9 @@
         </p>
       </div>
     </section>
+
+    ${ require('./partials/footer.html') }
+
   </div>
 </body>
 
