--- a/app/index.html
+++ b/app/index.html
@@ -15,16 +15,13 @@
   <div class="sy-page">
     ${ require('./partials/landingpage/intro.html') }
 
-    <a name="sy-what"></a>
     ${ require('./partials/landingpage/what.html') }
 
-    <a name="sy-why"></a>
     ${ require('./partials/landingpage/why-us.html') }
 
-    <a name="sy-meet"></a>
     ${ require('./partials/landingpage/meet-us.html') }
 
-    <div class="sy-grid__row">
+    <div class="sy-grid__row" id="sy-contact">
       <div class="sy-grid__col-6">
         ${ require('./partials/landingpage/office.html') }
       </div>
