--- a/app/privacy.html
+++ b/app/privacy.html
@@ -9,11 +9,7 @@
 </head>
 
 <body>
-  <div class="sy-navigation">
-    <nav class="sy-navigation__list">
-      <a class="sy-navigation__item" href='/'>Home</a>
-    </nav>
-  </div>
+  ${ require('./partials/landingpage/navigation.html') }
 
   <div class="sy-page sy-legal">
     <section class="sy-section">
@@ -49,6 +45,9 @@
         Auf unserer Website befinden sich sog. Hyperlinks zu Websites anderer Anbieter. Bei Aktivierung dieser Hyperlinks werden sie von unserer Website direkt auf die Website der anderen Anbieter weitergeleitet. Sie erkennen dies u.a. am Wechsel der URL. Wir können keine Verantwortung für den vertraulichen Umgang Ihrer Daten auf diesen Websites Dritter übernehmen, da wir keinen Einfluss darauf haben, dass diese Unternehmen die Datenschutzbestimmungen einhalten. Über den Umgang mit Ihren personenbezogenen Daten durch diese Unternehmen informieren Sie sich bitte auf diesen Websites direkt.
       </div>
     </section>
+
+    ${ require('./partials/footer.html') }
+
   </div>
 </body>
 
