--- a/app/imprint.html
+++ b/app/imprint.html
@@ -17,7 +17,7 @@
         <h1 class="sy-headline sy-headline--section">Impressum</h1>
       </header>
       <div class="sy-section__content">
-        <p>Angaben gemäß § 5 TMG</p>
+        <p>Pflichtangaben nach § 5 Telemediengesetz/Impressum</p>
         <p>
           Satellytes Digital Consulting GmbH<br/>
           Carola-Neher-Str. 10<br/>
@@ -27,29 +27,44 @@
 
       <div class="sy-section__content">
         <h3 class="sy-headline">Vertreten durch</h3>
-        <p>Gholam Abdol</p>
+        <p>Geschäftsführer: Gholam Abdol</p>
       </div>
 
       <div class="sy-section__content">
         <h3 class="sy-headline">Kontakt</h3>
         <p>
-          Telefon: 0123456789<br/>
-          E-Mail: <a href="mailto:legal@satellytes.com">legal@satellytes.com</a><br/>
+          Telefon:+49 89 99829894<br/>
+          E-Mail: <a href="mailto:ping@satellytes.com">ping@satellytes.com</a><br/>
           Internetadresse: <a href="https://www.satellytes.com" target="_blank" rel="noopener">https://satellytes.com</a><br/>
         </p>
       </div>
 
       <div class="sy-section__content">
-        <h3 class="sy-headline">Registereintrag</h3>
+        <h3 class="sy-headline">Registereintrag Satellytes Digital Consulting GmbH</h3>
         <p>
           Eintragung im Handelsregister<br/>
-          Registernummer: 0000<br/>
-          Registergericht: XXXXX
+          Registergericht: Amtsgericht München<br/>
+          Registernummer: HRB 240581<br/>
         </p>
       </div>
 
       <div class="sy-section__content">
-        <h3 class="sy-headline">Haftungsausschluss</h3>
+        <h3 class="sy-headline">Umsatzsteuer-ID Satellytes Digital Consulting GmbH</h3>
+        <p>
+          Umsatzsteuer-Identifikationsnummer gemäß §27 a Umsatzsteuergesetz: DE317837432<br/>
+        </p>
+      </div>
+
+
+      <div class="sy-section__content">
+        <h3 class="sy-headline">Inhaltlich Verantwortlicher gemäß § 55 RStV</h3>
+        <p>
+          Gholam Abdol, Carola-Neher-Straße 10, 81379 München
+        </p>
+      </div>
+
+      <div class="sy-section__content">
+        <h3 class="sy-headline">Nutzungsbedingungen/Disclaimer</h3>
         <p>
           Haftung für Inhalte<br/>
           Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
