--- a/app/imprint.html
+++ b/app/imprint.html
@@ -66,22 +66,14 @@
       <div class="sy-section__content">
         <h3 class="sy-headline">Nutzungsbedingungen/Disclaimer</h3>
         <p>
-          Haftung für Inhalte<br/>
-          Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.
-        </p>
-      </div>
-
-      <div class="sy-section__content">
-        <h3 class="sy-headline">Haftung für Links</h3>
-        <p>
-          Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.
-        </p>
-      </div>
-
-      <div class="sy-section__content">
-        <h3 class="sy-headline">Urheberrecht</h3>
-        <p>
-          Die durch die Seitenbetreiber erstellten bzw. verwendeten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
+          (1) Diese Website ist Gegenstand der nachfolgenden Nutzungsbedingungen, die im Verhältnis zwischen Nutzer und Dienstanbieter mit dem Aufruf dieser Website verbindlich vereinbart sind. Soweit spezielle Bedingungen für einzelne Nutzungen dieser Website von den nachfolgenden Nutzungsbedingungen abweichen, wird in der Website an entsprechender Stelle ausdrücklich darauf hingewiesen. Es gelten dann im jeweiligen Einzelfall ergänzend die besonderen Nutzungsbedingungen.
+          Diese Website beinhaltet Daten und Informationen aller Art, die marken- und/oder urheberrechtlich zugunsten des Diensteanbieters oder im Einzelfall auch zugunsten Dritter geschützt sind. Es ist daher nicht gestattet, die Website im Ganzen oder einzelne Teile davon herunterzuladen, zu vervielfältigen und/oder zu verbreiten. Gestattet ist vor allem die technisch bedingte Vervielfältigung zum Zwecke des Browsing, soweit diese Handlung keinen wirtschaftlichen Zwecken dient, sowie die dauerhafte Vervielfältigung für den eigenen Gebrauch.</br>
+          (2) Es ist gestattet, einen Link auf diese Website zu setzen, soweit er allein der Querreferenz dient. Der Diensteanbieter behält sich das Recht vor, die Gestattung zu widerrufen. Das Framen dieser Website ist nicht gestattet.</br>
+          (3) Der Diensteanbieter übernimmt die Haftung für die Inhalte seiner Website gemäß den gesetzlichen Bestimmungen. Eine Gewähr für Richtigkeit und Vollständigkeit der auf der Website befindlichen Information wird nicht übernommen. Verweise und Links auf Websites Dritter bedeuten nicht, dass sich der Diensteanbieter die hinter dem Verweis oder Link liegenden Inhalte zu eigen macht. Die Inhalte begründen keine Verantwortung des Diensteanbieters für die dort bereit gehaltenen Daten und Informationen. Der Diensteanbieter hat keinen Einfluss auf die hinter dem Link liegenden Inhalte. Für rechtswidrige, fehlerhafte oder unvollständige Inhalte und für Schäden, die aufgrund der Nutzung von einem hinter dem Link liegenden Inhalt verursacht worden sind, haftet der Diensteanbieter daher nicht.</br>
+          (4) Die Nutzung des Internets erfolgt auf eigene Gefahr des Nutzers. Der Diensteanbieter haftet vor allem nicht für den technisch bedingten Ausfall des Internets bzw. des Zugangs zum Internet.</br>
+          (5) Gerichtsstand ist, wenn der Vertragspartner Kaufmann, juristische Person des öffentlichen Rechts oder öffentlich-rechtliches Sondervermögen ist, am Sitz des Diensteanbieters. Es gilt deutsches Recht unter Ausschluss des UN-Kaufrechts.</br>
+          (6) Für den Fall, dass der Nutzer Verbraucher (nicht Unternehmer) ist, erfolgt der Hinweis gemäß Art. 14 der VO (EU) Nr. 524/2013 – ODR-Verordnung auf die Möglichkeit außergerichtlicher Streitbeilegung. Details hierzu finden sich in der vorgenannten Verordnung und unter https://ec.europa.eu/consumers/odr.</br>
+          (7) Der Diensteanbieter behält sich das Recht vor, diese Nutzungsbedingungen von Zeit zu Zeit zu modifizieren und sie der technischen sowie rechtlichen Entwicklung anzupassen. Der Nutzer – soweit er sich registriert hat – wird auf die Veränderung gesondert hingewiesen. Im Falle der Unwirksamkeit einzelner Regelungen dieser Nutzungsvereinbarung bleibt die Wirksamkeit im Übrigen unberührt.</br>
         </p>
       </div>
     </section>
